--- a/HttpDoom.csproj
+++ b/HttpDoom.csproj
@@ -10,4 +10,8 @@
       <PackageReference Include="System.CommandLine" Version="2.0.0-beta1.20574.7" />
     </ItemGroup>
 
+    <ItemGroup>
+      <None Remove=".gitignore" />
+    </ItemGroup>
+
 </Project>
