--- a/HttpDoom.csproj
+++ b/HttpDoom.csproj
@@ -3,6 +3,8 @@
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>net5.0</TargetFramework>
+        <PackageVersion>0.2.0</PackageVersion>
+        <AssemblyVersion>0.2.0</AssemblyVersion>
     </PropertyGroup>
 
     <ItemGroup>
