--- a/HttpDoom.csproj
+++ b/HttpDoom.csproj
@@ -5,6 +5,7 @@
         <TargetFramework>net5.0</TargetFramework>
         <PackageVersion>0.2.0</PackageVersion>
         <AssemblyVersion>0.2.0</AssemblyVersion>
+        <Nullable>disable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
