Now we have dev builds (?)

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -28,3 +28,11 @@ jobs:
       with:
           files: ./bin/Release/net5.0/
           dest: ${{ github.workspace }}/result.zip
+    - uses: "marvinpinto/action-automatic-releases@latest"
+      with:
+        repo_token: "${{ secrets.GITHUB_TOKEN }}"
+        automatic_release_tag: "latest"
+        prerelease: true
+        title: "Development Build"
+        files: |
+            ${{ github.workspace }}/result.zip
