--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -3,8 +3,6 @@ name: Development Builds
 on:
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
 
 jobs:
   build:
@@ -26,12 +24,12 @@ jobs:
     - uses: actions/checkout@v2
     - uses: papeloto/action-zip@v1
       with:
-          files: ./bin/Release/net5.0/
-          dest: ./result.zip
+          files: ./bin/Release/net5.0
+          dest: ./binaries.zip
     - uses: "marvinpinto/action-automatic-releases@latest"
       with:
         repo_token: "${{ secrets.GITHUB_TOKEN }}"
         automatic_release_tag: "latest"
         prerelease: true
         title: "Development Build"
-        files: ./result.zip
+        files: ./binaries.zip
