--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Releasing for Linux
       run: dotnet publish -c Release -r linux-x64 --self-contained true
     - name: Releasing for Windows
-      run: dotnet publish -c Release -r win-x64 --self-contained true
+      run: dotnet publish -c Release -r win-x64 --self-contained true; ls -lacs
     - uses: actions/checkout@v2
     - uses: papeloto/action-zip@v1
       with:
