--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -16,20 +16,25 @@ jobs:
       with:
         dotnet-version: 5.0.x
     - name: Releasing for macOS
-      run: dotnet publish -c Release -r osx-x64 --self-contained true
+      run: | 
+        dotnet publish -c Release -r osx-x64 --self-contained true
+        zip -r osx-x64-self-contained.zip ./bin/Release/net5.0/osx-x64
     - name: Releasing for Linux
-      run: dotnet publish -c Release -r linux-x64 --self-contained true
+      run: |
+        dotnet publish -c Release -r linux-x64 --self-contained true
+        zip -r linux-x64-self-contained.zip ./bin/Release/net5.0/linux-x64
     - name: Releasing for Windows
-      run: dotnet publish -c Release -r win-x64 --self-contained true; ls -lacs ./bin/Release
+      run: | 
+        dotnet publish -c Release -r win-x64 --self-contained true
+        zip -r win-x64-self-contained.zip ./bin/Release/net5.0/win-x64
     - uses: actions/checkout@v2
-    - uses: papeloto/action-zip@v1
-      with:
-          files: ./bin/Release/net5.0
-          dest: ./binaries.zip
     - uses: "marvinpinto/action-automatic-releases@latest"
       with:
         repo_token: "${{ secrets.GITHUB_TOKEN }}"
         automatic_release_tag: "latest"
         prerelease: true
         title: "Development Build"
-        files: ./binaries.zip
+        files: |
+          osx-x64-self-contained.zip
+          linux-x64-self-contained.zip
+          win-x64-self-contained.zip
