--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -36,6 +36,4 @@ jobs:
         prerelease: true
         title: "Development Build"
         files: |
-          osx-x64-self-contained.zip
-          linux-x64-self-contained.zip
-          win-x64-self-contained.zip
+          *.zip
