--- a/HttpDoom.Console/HttpDoom.Console.csproj
+++ b/HttpDoom.Console/HttpDoom.Console.csproj
@@ -5,4 +5,12 @@
     <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.CommandLine" Version="2.0.0-beta1.21308.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\HttpDoom.Core\HttpDoom.Core.csproj" />
+  </ItemGroup>
+
 </Project>
