--- a/HttpDoom.Core/HttpDoom.Core.csproj
+++ b/HttpDoom.Core/HttpDoom.Core.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Selenium.WebDriver" Version="4.0.0-beta4" />
+  </ItemGroup>
+
 </Project>
